# stevepiercy.com

./: .readthedocs.yaml  .vale.ini  LICENSE  Makefile  README.md  pyproject.toml
docs/: conf.py  glossary.md  index.md  resume.md
docs/_static/: custom.css
